# ws63flash

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.en  config.h.in  configure.ac
.github/workflows/: cibuild.yml  msys2.yml
lib/: Makefile.am  endian.h  fcntl.h  float.h  getopt-cdefs.h  getopt.h  limits.h  locale.h  stdckdint.h  stddef.h  stdio.h  stdlib.h  string.h  strings.h  termios.h  time.h  uchar.h  unistd.h  wchar.h  wctype.h
lib/sys/: ioctl.h  socket.h  stat.h  time.h  types.h  uio.h
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
man/: Makefile.am  ws63flash.1  ws63fwpkg.1  ws63sign.1
src/: Makefile.am  baud.h  fwpkg.h  io.h  ws63defs.h  ws63flash.c  ws63flash.h  ws63fwpkg  ws63fwpkg.c  ws63sign.c  ws63sign.h  ymodem.h
src/blob/: ws63_loaderboot_signed.c  ws63_loaderboot_signed.h
